--- a/index.html
+++ b/index.html
@@ -1,42 +1,76 @@
-<iframe id="googleMapFrame" width="100%" height="400" frameborder="0"
-        style="border:0; display: none;"
-        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-</iframe>
+<!DOCTYPE html>
+<html lang="nl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Live GPS Tracker</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+    <style>
+        #map {
+            height: 500px;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
 
-<p id="noLocationMessage" style="text-align: center; font-size: 18px; font-weight: bold;">
-    🌍 Kan geen locatie ophalen... Zorg ervoor dat locatie is ingeschakeld.
-</p>
+    <h2>📍 Live GPS Locatie</h2>
+    <div id="map"></div>
 
-<script>
-const GOOGLE_MAPS_API_KEY = "AIzaSyDzzLv55i17UMMJb9rP1tUmvrhw4z4eU9c"; // Vervang met je eigen API-sleutel!
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <script>
+        // 🔹 Traccar API Configuratie
+        const TRACCAR_SERVER = "http://45.55.84.20:8082"; // Vervang met jouw Traccar-server
+        const TRACCAR_USERNAME = "Reclameappie@gmail.com"; // Vervang met jouw gebruikersnaam
+        const TRACCAR_PASSWORD = "xy3s9e6k"; // Vervang met jouw wachtwoord
+        const DEVICE_ID = 441821; // Vervang met het juiste device ID
 
-function showGoogleMaps(lat, lon) {
-    const mapUrl = `https://www.google.com/maps/embed/v1/place?key=${GOOGLE_MAPS_API_KEY}&q=${lat},${lon}`;
-    document.getElementById("googleMapFrame").src = mapUrl;
-    document.getElementById("googleMapFrame").style.display = "block"; // Toon de kaart
-    document.getElementById("noLocationMessage").style.display = "none"; // Verberg de melding
-}
+        // 🔹 Basis-authenticatie maken
+        const authHeader = "Basic " + btoa(TRACCAR_USERNAME + ":" + TRACCAR_PASSWORD);
 
-function getLocation() {
-    if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(
-            (position) => {
-                const lat = position.coords.latitude;
-                const lon = position.coords.longitude;
-                console.log("Locatie gevonden:", lat, lon);
-                showGoogleMaps(lat, lon);
-            },
-            (error) => {
-                console.error("Fout bij ophalen locatie:", error);
-                document.getElementById("noLocationMessage").textContent = "🌍 Locatie niet beschikbaar. Controleer je instellingen.";
+        // 🔹 Kaart initialiseren met Leaflet.js
+        let map = L.map('map').setView([52.370216, 4.895168], 15); // Amsterdam als startpositie
+        L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png").addTo(map);
+        let marker = L.marker([52.370216, 4.895168]).addTo(map); // Dummy marker
+
+        // 🔹 Functie om GPS-locatie van Traccar op te halen
+        async function fetchGPSLocation() {
+            try {
+                const response = await fetch(`${TRACCAR_SERVER}/api/positions`, {
+                    method: "GET",
+                    headers: { "Authorization": authHeader }
+                });
+
+                if (!response.ok) {
+                    console.error("❌ Fout bij ophalen GPS-data:", response.status);
+                    return;
+                }
+
+                const data = await response.json();
+                console.log("📡 Traccar API Response:", data);
+
+                // Zoek de juiste device-locatie
+                const position = data.find(pos => pos.deviceId === DEVICE_ID);
+                if (position) {
+                    updateMap(position.latitude, position.longitude);
+                }
+            } catch (error) {
+                console.error("❌ API Fout:", error);
             }
-        );
-    } else {
-        console.warn("Geolocatie niet ondersteund door browser.");
-        document.getElementById("noLocationMessage").textContent = "🌍 Jouw browser ondersteunt geen geolocatie.";
-    }
-}
+        }
 
-// Probeer de locatie op te halen
-getLocation();
-</script>
+        // 🔹 Functie om kaart en marker bij te werken
+        function updateMap(lat, lon) {
+            console.log(`📍 GPS Update: Lat ${lat}, Lon ${lon}`);
+
+            marker.setLatLng([lat, lon]); // Verplaats de marker
+            map.setView([lat, lon]); // Focus de kaart op de nieuwe locatie
+        }
+
+        // 🔹 Haal elke 10 seconden nieuwe GPS-data op
+        fetchGPSLocation();
+        setInterval(fetchGPSLocation, 10000);
+    </script>
+
+</body>
+</html>
