--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
             map.setView([lat, lon]); // Focus de kaart op de nieuwe locatie
         }
 
-        // 🔹 Haal elke 10 seconden nieuwe GPS-data op
+        // 🔹 Haal elke 10 seconden nieuwe GPS-data op.
         fetchGPSLocation();
         setInterval(fetchGPSLocation, 10000);
     </script>
-//l
+
 </body>
 </html>
